hard-gists/00a17b1d374dfc267a9a/run.log
=== Docker Run Log for 00a17b1d374dfc267a9a ===
Started at: Mi 29. Okt 11:18:20 CET 2025

[2025-10-29 11:18:20] START: Running container for 00a17b1d374dfc267a9a
[2025-10-29 11:18:20] SUCCESS: Container ed02bdb704c8a35d304eb90393c890c17cc4f160e515f8e735759f2a70eaf589 started for 00a17b1d374dfc267a9a
=== Container logs for 00a17b1d374dfc267a9a ===
  File "/snippet.py", line 41
    print str(err)
    ^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 00a17b1d374dfc267a9a ===
[2025-10-29 11:18:22] INFO: Container ed02bdb704c8a35d304eb90393c890c17cc4f160e515f8e735759f2a70eaf589 has stopped
